I worked on my page a bit more and added CSS file

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>Hello World</h1> 
-  <h1> This a test</h1>
+  <h1 id="main-heading"> Jacob's program</h1> 
+  <h2> This a test</h2>
+  <h2 id="dayOfWeek"></h2>
+  <h2 id="localTimeDisplay"></h2>
+  <h2 id="main-button">Press Me</h2>
+
+
   <script src='index.js'></script> 
 </body>
 </html>
