Added date and religned

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1 id="main-heading"> Jacob's program</h1> 
+  <h1 id="main-heading"> Jacob's Program</h1> 
   <h2> This a test</h2>
-  <h2 id="dayOfWeek"></h2>
-  <h2 id="localTimeDisplay"></h2>
+  <div id="dateTimeContainer">
+    <h2 id="localDateDisplay"></h2>
+    <h2 id="dayOfWeek"></h2>
+    <h2 id="localTimeDisplay"></h2>
+  </div>
   <h2 id="main-button">Press Me</h2>
 
 
