I made a pretty cool button

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <h1 id="main-heading"> Jacob's Program</h1> 
   <h2> This a test</h2>
   <div id="dateTimeContainer">
-    <h2 id="localDateDisplay"></h2>
-    <h2 id="dayOfWeek"></h2>
-    <h2 id="localTimeDisplay"></h2>
+    <h2 class="dateTime" id="localDateDisplay"></h2>
+    <h2 class="dateTime" id="dayOfWeek"></h2>
+    <h2 class="dateTime" id="localTimeDisplay"></h2>
   </div>
-  <h2 id="main-button">Press Me</h2>
-
-
+ 
+  <div class="buttonContainer"> 
+    <button id="mainButton">Boop</button>
+  </div>
   <script src='index.js'></script> 
 </body>
 </html>
