Added myTextFile but ran into issue with java

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
   <h1 id="main-heading"> Jacob's Program</h1> 
-  <h2> This a test</h2>
   <div id="dateTimeContainer">
     <h2 class="dateTime" id="localDateDisplay"></h2>
     <h2 class="dateTime" id="dayOfWeek"></h2>
     <h2 class="dateTime" id="localTimeDisplay"></h2>
   </div>
- 
   <div class="buttonContainer"> 
     <button id="mainButton">Boop</button>
   </div>
+  <h2 id="myText1"></h2>
+  <h2 id="myText2"></h2>
   <script src='index.js'></script> 
 </body>
 </html>
