Some last minute changes and work done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1 id="main-heading"> Jacob's Program</h1> 
   <div id="dateTimeContainer">
-    <h2 class="dateTime" id="localDateDisplay"></h2>
+    <h2 class="dateTime" id="localDateDisplay"></h2>  
     <h2 class="dateTime" id="dayOfWeek"></h2>
     <h2 class="dateTime" id="localTimeDisplay"></h2>
   </div>
@@ -18,6 +18,11 @@
   </div>
   <h2 id="myText1"></h2>
   <h2 id="myText2"></h2>
+  <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name">
+    <input type="submit" value="Enter">
+  </form>
   <script src='index.js'></script> 
 </body>
 </html>
