Pushing old lessons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1 id="main-heading"> Jacob's Program</h1> 
+  <h1 id="main-heading"> The State of Rysael</h1> 
   <div id="dateTimeContainer">
     <h2 class="dateTime" id="localDateDisplay"></h2>  
     <h2 class="dateTime" id="dayOfWeek"></h2>
